# mpv-mitm-proxy

./: Cargo.toml  LICENSE  README.md  mitm_rust_proxy.lua  proxies.txt
.github/workflows/: linux-build.yml  rust.yml
src/: certificate.rs  main.rs  proxy.rs
