[package]
name = "mpv-mitm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
lru = "0.12.3"
itoa = "1.0"
lazy_static = "1.4"
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.6"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", features = ["pem"] }
tokio-socks = "0.5"
url = "2.5"
thiserror = "1.0"
dashmap = "5.5"
http = "1.1"
time = "0.3"
parking_lot = "0.12"
http-body = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
